--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@ oncontextmenu="event.preventDefault();"
                         <img src="lll.png" alt="Social media application interface with violet branding showing user profile and posts">
                     </div>
                     <div class="project-info">
-                        <h3>landing-page/h3>
+                        <h3>landing-page</h3>
                         <p>Building high-converting landing pages tailored for businesses, products, or campaigns.</p>
                         <div class="project-links">
                             <a href=" https://samahcodes.github.io/landing-page/">Live Demo</a>
@@ -1344,3 +1344,4 @@ toggleBtn.addEventListener('click', () => {
     </script>
 </body>
 </html>
+
