--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Portfolio | Black & Violet</title>
+    <title>Samah Mohamed Salah</title>
     <style>
         /* Base Styles & Variables */
         :root {
@@ -1344,4 +1344,5 @@ toggleBtn.addEventListener('click', () => {
     </script>
 </body>
 </html>
+
 
